chore: add AuthPAge with CLI

--- a/src/app/portal/portal.page.html
+++ b/src/app/portal/portal.page.html
@@ -15,7 +15,7 @@
     <ion-item>
       <ion-input
         label="Clave del Centro de Trabajo (CCT)"
-        labelPlacement="stacked"
+        labelPlacement="floating"
         placeholder="Escribe la clave aquí"
         maxlength="10"
         [(ngModel)]="cct"
