--- a/src/app/teacher/teacher.page.html
+++ b/src/app/teacher/teacher.page.html
@@ -1,13 +1,27 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>teacher</ion-title>
+    <ion-title>Panel de maestro</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="onLogout()">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">teacher</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+
+  <ion-list-header>
+    <ion-label>Bienvenido, maestro</ion-label>
+  </ion-list-header>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Mis alumnos</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
