--- a/src/app/caregiver/caregiver.page.html
+++ b/src/app/caregiver/caregiver.page.html
@@ -1,13 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Caregiver</ion-title>
+    <ion-title>padre</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="onLogout()">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Caregiver</ion-title>
+      <ion-title size="large">padre</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
