refactor: update code variables

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -46,7 +46,7 @@
 
       @if (!isLoginMode && !isResetPasswordMode) {
         <ion-item lines="none">
-          <ion-checkbox labelPlacement="end" formControlName="isPadre">
+          <ion-checkbox labelPlacement="end" formControlName="isTutor">
             Registrarme como tutor (Madre o Padre)
           </ion-checkbox>
         </ion-item>
