feat(auth): implement resend email to verificate account

--- a/src/app/portal/portal.page.html
+++ b/src/app/portal/portal.page.html
@@ -7,9 +7,7 @@
     La plataforma para una comunicación efectiva entre la escuela, maestros y padres de familia.
   </p>
 
-  <ion-img src="../../assets/img/logo-portal.png">
-
-  </ion-img>
+  <ion-img src="../../assets/img/logo-portal.png"></ion-img>
 
   <ion-list [inset]="true">
     <ion-item>
@@ -40,7 +38,7 @@
     Continuar
   </ion-button>
   <ion-toast
-   cssClass="page__toast--danger"
+   cssClass="page__toast"
    [message]="toastMessage"
    [isOpen]="isToastOpen"
    [duration]="5000"
