--- a/src/global.scss
+++ b/src/global.scss
@@ -40,8 +40,6 @@
 
 /* Custom CSS */
 
-.page__toast--danger {
-  --background: #c5000f;
-  --color: #ffffff;
-  font-size: 1.3rem;
+.page__toast {
+  font-size: 1.2rem;
 }
