--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -4,7 +4,7 @@
       @if(isLoginMode) {
         Usuarios registrados
       } @else if(isResetPasswordMode) {
-        Restablecer contraseña
+        Cambio de contraseña
       } @else {
         Nuevo usuario
       }
@@ -12,67 +12,86 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+<ion-content color="light">
 
-    @if(emailVerificationMessage) {
-      <ion-item lines="none" class="ion-text-center ion-padding-vertical">
-        <ion-text color="primary">
+  @if(emailVerificationMessage) {
+      <ion-item lines="none" class="ion-text-center ion-padding-vertical" color="light">
+        <ion-text color="dark">
           <p>{{emailVerificationMessage}}</p>
+          <ion-button expand="block" fill="clear" (click)="onResendVerificationEmail()">
+            Reenviar correo de verificación
+          </ion-button>
         </ion-text>
       </ion-item>
-    }
+  }
 
-    <ion-list>
-
+  <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+    <ion-list [inset]="true">
       <ion-item>
         <ion-input
-         label="Email"
-         type="email"
          formControlName="email"
-        ></ion-input>
+         label="Usuario (email)"
+         labelPlacement="stacked"
+         type="email"
+        >
+        </ion-input>
       </ion-item>
 
       @if(!isResetPasswordMode) {
         <ion-item>
           <ion-input
-          label="Contraseña"
-          type="Password"
-          formControlName="password"
-          ></ion-input>
+           formControlName="password"
+           label="Contraseña"
+           labelPlacement="stacked"
+           type="password"
+          >
+            <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+          </ion-input>
         </ion-item>
       }
 
-
-      @if (!isLoginMode && !isResetPasswordMode) {
-        <ion-item lines="none">
-          <ion-checkbox labelPlacement="end" formControlName="isTutor">
-            Registrarme como tutor (Madre o Padre)
-          </ion-checkbox>
+      @if(!isLoginMode && !isResetPasswordMode) {
+        <ion-item>
+          <ion-toggle formControlName="isTutor">
+            <ion-label>Registrarme como tutor</ion-label>
+            <ion-note>(Mamá o Papá)</ion-note>
+          </ion-toggle>
         </ion-item>
       }
 
-    </ion-list>
-
-    <ion-button expand="block" type="submit" [disabled]="!authForm.valid">
-      @if(isLoginMode) {
-        Iniciar Sesión
-      } @else if(isResetPasswordMode) {
-        Restablecer Contraseña
-      } @else {
-        Registrarse
-      }
-    </ion-button>
-
-    <ion-button expand="block" fill="clear" (click)="onSwitchMode()">
-      {{ isLoginMode ? 'Registrate aquí' : 'Inicia sesión aquí' }}
-    </ion-button>
-
-    @if(isLoginMode) {
-      <ion-button expand="block" fill="clear" (click)="onSwitchToResetPassword()">
-        ¿Olvidaste tu contraseña?
+      <ion-button
+       class="form__button--submit"
+       expand="block"
+       type="submit"
+       [disabled]="!this.authForm.valid"
+      >
+        @if(isLoginMode) {
+          Iniciar Sesión
+        } @else if(isResetPasswordMode) {
+          Restablecer
+        } @else {
+          Registrarse
+        }
       </ion-button>
-    }
-
+    </ion-list>
   </form>
+
+  @if(isLoginMode) {
+    <ion-button expand="block" fill="clear" (click)="onSwitchToResetPassword()">
+      ¿Olvidaste tu contraseña?
+    </ion-button>
+  }
+
+  <ion-button expand="block" fill="clear" (click)="onSwitchMode()">
+    {{ isLoginMode ? 'Registrate aquí' : 'Inicia sesión aquí' }}
+  </ion-button>
+
+  <ion-toast
+   cssClass="page__toast"
+   [message]="toastMessage"
+   [isOpen]="isToastOpen"
+   duration="5000"
+   (didDismiss)="setOpenToast(false)"
+  ></ion-toast>
+
 </ion-content>
