chore: disable system dark mode app-wide

--- a/src/global.scss
+++ b/src/global.scss
@@ -34,11 +34,15 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
+/* @import '@ionic/angular/css/palettes/dark.system.css'; */
 
 
 
-/* Custom CSS */
+/**
+ * Custom
+ * -----------------------------------------------------
+ * Global customized rules
+ */
 
 .page__toast {
   font-size: 1.2rem;
