--- a/src/app/portal/portal.page.scss
+++ b/src/app/portal/portal.page.scss
@@ -1,5 +1,23 @@
+ion-img::part(image) {
+  border-radius: 12px;
+  margin: 2rem 0;
+  width: 99%;
+}
+
 .form__button {
   margin: 0 auto;
   width: 92%;
 }
 
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+
+  p {
+    margin-top: 16px;
+    color: var(--ion-color-medium);
+  }
+}
