--- a/src/app/teacher/teacher.page.html
+++ b/src/app/teacher/teacher.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Panel de maestro</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="onLogout()">
