--- a/src/app/admin/tab-classes/tab-classes.component.html
+++ b/src/app/admin/tab-classes/tab-classes.component.html
@@ -1,3 +1,9 @@
-<p>
-  tab-classes works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Grupos</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+</ion-content>
