--- a/src/app/admin/tab-notifications/tab-notifications.component.html
+++ b/src/app/admin/tab-notifications/tab-notifications.component.html
@@ -1,3 +1,14 @@
-<p>
-  tab-notifications works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Notificaciones</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="onLogout()">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+</ion-content>
