refactor: school validation service and guard

--- a/src/app/admin/tab-users/tab-users.component.scss
+++ b/src/app/admin/tab-users/tab-users.component.scss
@@ -1,23 +1,23 @@
 h2 {
-  color: #577bbc;
+  color: #666666;
   font-size: 0.9rem;
   font-weight: 500;
 }
 
 ion-label {
-  color: #666666;
+  color: #222d3a;
 }
 
 .user-item-card {
-    --background: #f7f7f7;
-    margin: 15px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  --background: #f7f7f7;
+  margin: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 
-    ion-avatar {
-      --border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      margin-right: 15px;
-    }
+  ion-avatar {
+    --border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
   }
+}
