--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -1,9 +1,38 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>Escuelas</ion-title>
+    @if(isLoading) {
+      <ion-progress-bar color="warning" type="indeterminate"></ion-progress-bar>
+    }
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    @for(school of schools; track school.id) {
+      <ion-item-sliding class="sliding-item-card">
+        <ion-item class="custom-item">
+          <ion-label>
+            <h2>{{ school.nombre }}</h2>
+            <p>{{ school.cct }}</p>
+          </ion-label>
+          <ion-chip>PIN: <strong>{{ school.pin }}</strong></ion-chip>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option>
+            <ion-icon slot="icon-only" name="create"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="danger">
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    }
+  </ion-list>
 </ion-content>
+
+<ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <ion-fab-button size="small" (click)="onAddSchool()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
