--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-list>
     @for(school of schools; track school.id) {
-      <ion-item-sliding class="sliding-item-card">
+      <ion-item-sliding class="sliding-item-card" #slidingItem>
         <ion-item class="custom-item">
           <ion-label>
             <h2>{{ school.nombre }}</h2>
@@ -19,16 +19,33 @@
           <ion-chip>PIN: <strong>{{ school.pin }}</strong></ion-chip>
         </ion-item>
         <ion-item-options side="end">
-          <ion-item-option>
+          <ion-item-option (click)="onUpdateSchool(slidingItem, school)">
             <ion-icon slot="icon-only" name="create"></ion-icon>
           </ion-item-option>
-          <ion-item-option color="danger">
+          <ion-item-option color="danger" id="{{ school.id }}">
             <ion-icon slot="icon-only" name="trash"></ion-icon>
           </ion-item-option>
+          <ion-action-sheet
+           trigger="{{ school.id }}"
+           header="Estás a punto de eliminar"
+           subHeader="{{ school.nombre }}"
+           [buttons]="actionSheetButtons"
+           (didDismiss)="onDeleteSchool($event, slidingItem, school)"
+          >
+          </ion-action-sheet>
         </ion-item-options>
       </ion-item-sliding>
     }
   </ion-list>
+
+  <ion-toast
+   cssClass="page__toast"
+   [message]="toastMessage"
+   [isOpen]="isToastOpen"
+   [duration]="5000"
+   (didDismiss)="setOpenToast(false)"
+  ></ion-toast>
+
 </ion-content>
 
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
