--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -11,6 +11,7 @@
   <ion-list>
     @for(school of schools; track school.id) {
       <ion-item-sliding class="sliding-item-card" #slidingItem>
+
         <ion-item class="custom-item">
           <ion-label>
             <h2>{{ school.nombre }}</h2>
@@ -18,23 +19,54 @@
           </ion-label>
           <ion-chip>PIN: <strong>{{ school.pin }}</strong></ion-chip>
         </ion-item>
+
         <ion-item-options side="end">
-          <ion-item-option (click)="onUpdateSchool(slidingItem, school)">
+
+          <ion-item-option id="edit-{{ school.id }}">
             <ion-icon slot="icon-only" name="create"></ion-icon>
           </ion-item-option>
-          <ion-item-option color="danger" id="{{ school.id }}">
+
+          <ion-item-option id="delete-{{ school.id }}" color="danger">
             <ion-icon slot="icon-only" name="trash"></ion-icon>
           </ion-item-option>
+
           <ion-action-sheet
-           trigger="{{ school.id }}"
+           trigger="delete-{{ school.id }}"
            header="Estás a punto de eliminar"
            subHeader="{{ school.nombre }}"
            [buttons]="actionSheetButtons"
            (didDismiss)="onDeleteSchool($event, slidingItem, school)"
           >
           </ion-action-sheet>
+
         </ion-item-options>
       </ion-item-sliding>
+      <ion-modal
+       trigger="edit-{{school.id}}"
+       [initialBreakpoint]="0.75"
+       [breakpoints]="[0, 0.25, 0.50, 0.75, 1]"
+       (didDismiss)="onModalDismiss($event, slidingItem)"
+      >
+        <ng-template>
+
+          <ion-header>
+            <ion-toolbar>
+              <ion-buttons slot="start">
+                <ion-button (click)="closeModal('edit-'+school.id)">Cancelar</ion-button>
+              </ion-buttons>
+              <ion-title>Editar Escuela</ion-title>
+              <ion-buttons slot="end">
+                <ion-button [strong]="true">Guardar</ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+
+          <ion-content>
+            <h2>{{ school.nombre }}</h2>
+          </ion-content>
+
+        </ng-template>
+      </ion-modal>
     }
   </ion-list>
 
@@ -48,8 +80,34 @@
 
 </ion-content>
 
+<ion-modal
+ trigger="new-school-btn"
+ [initialBreakpoint]="0.75"
+ [breakpoints]="[0, 0.25, 0.50, 0.75, 1]"
+>
+  <ng-template>
+
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="closeModal('new-school-btn')">Cancelar</ion-button>
+        </ion-buttons>
+        <ion-title>Nueva Escuela</ion-title>
+        <ion-buttons slot="end">
+          <ion-button [strong]="true">Guardar</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+
+    </ion-content>
+
+  </ng-template>
+</ion-modal>
+
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-  <ion-fab-button size="small" (click)="onAddSchool()">
+  <ion-fab-button size="small" id="new-school-btn">
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
