feat(ui): add classes modal

--- a/src/app/admin/tab-schools/tab-schools.component.scss
+++ b/src/app/admin/tab-schools/tab-schools.component.scss
@@ -13,8 +13,14 @@ ion-chip strong {
     font-size: 1.2rem;
 }
 
-ion-label {
-  color: #222d3a;
+ion-modal.modal-classes__item ion-label{
+  --color: #666666 !important;
+  font-size: 1rem !important;
+  font-weight: 600;
+}
+
+ion-modal.modal-classes__item ion-label > p {
+  text-align: center;
 }
 
 .custom-item {
