--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -5,6 +5,20 @@
       <ion-progress-bar color="warning" type="indeterminate"></ion-progress-bar>
     }
   </ion-toolbar>
+  <ion-toolbar color="light">
+    <ion-buttons slot="primary">
+      <ion-button fill="outline" color="primary" id="classes-btn">
+        <ion-icon name="people" slot="start"></ion-icon>
+        Grupos
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="primary">
+      <ion-button fill="outline" color="primary" id="courses-btn">
+        <ion-icon name="school" slot="start"></ion-icon>
+        Materias
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -43,8 +57,8 @@
       </ion-item-sliding>
       <ion-modal
        trigger="edit-{{school.id}}"
-       [initialBreakpoint]="0.80"
-       [breakpoints]="[0, 0.20, 0.40, 0.60, 0.80, 1]"
+       [initialBreakpoint]="initialBreakpoint"
+       [breakpoints]="breakpoints"
        (didDismiss)="onModalDismiss(slidingItem)"
       >
         <ng-template>
@@ -119,16 +133,17 @@
    [message]="toastMessage"
    [isOpen]="isToastOpen"
    [duration]="5000"
-   (didDismiss)="setOpenToast(false)"
-  ></ion-toast>
+   (didDismiss)="this.setOpenToast(false)"
+  >
+  </ion-toast>
 
 </ion-content>
 
 <ion-modal
  trigger="new-school-btn"
  (willDismiss)="closeModal('new-school-btn')"
- [initialBreakpoint]="0.80"
- [breakpoints]="[0, 0.20, 0.40, 0.60, 0.80, 1]"
+ [initialBreakpoint]="initialBreakpoint"
+ [breakpoints]="breakpoints"
 >
   <ng-template>
 
@@ -194,6 +209,126 @@
       </form>
     </ion-content>
 
+  </ng-template>
+</ion-modal>
+
+<!-- Modal de Grupos -->
+<ion-modal
+ class="modal-classes__item"
+ trigger="classes-btn"
+ (willDismiss)="closeModal('classes-btn')"
+ [initialBreakpoint]="initialBreakpoint"
+ [breakpoints]="breakpoints"
+>
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="closeModal('classes-btn');">
+            Cerrar
+          </ion-button>
+        </ion-buttons>
+        <ion-title>Grupos</ion-title>
+      </ion-toolbar>
+      <ion-grid>
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <ion-input-otp type="text" length="1" pattern="[1-3]" [(ngModel)]="classGrade"></ion-input-otp>
+          </ion-col>
+          <ion-col>
+            <ion-input-otp type="text" length="1" pattern="[a-zA-Z]" [(ngModel)]="classLetter" ></ion-input-otp>
+          </ion-col>
+          <ion-col>
+            <ion-fab vertical="center" horizontal="center">
+              <ion-fab-button
+               size="small"
+               [disabled]="!isValidClass()"
+               (click)="onAddClass()"
+              >
+                <ion-icon name="add"></ion-icon>
+              </ion-fab-button>
+            </ion-fab>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col>
+            <ion-label>
+              <p>Grado</p>
+            </ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-label>
+              <p>Grupo</p>
+            </ion-label>
+          </ion-col>
+          <ion-col></ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-header>
+    <ion-content class="ion-padding">
+
+      <ion-list>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>1RO / "A"</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>2DO / "B"</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>3RO / "C"</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+
+    </ion-content>
+  </ng-template>
+</ion-modal>
+
+<!-- Modal de Materias -->
+<ion-modal
+ trigger="courses-btn"
+ (willDismiss)="closeModal('courses-btn')"
+ [initialBreakpoint]="initialBreakpoint"
+ [breakpoints]="breakpoints"
+>
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="closeModal('courses-btn');">
+            Cerrar
+          </ion-button>
+        </ion-buttons>
+        <ion-title>Materias</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+
+    </ion-content>
   </ng-template>
 </ion-modal>
 
