feat(ui): add courses modal

--- a/src/app/admin/tab-schools/tab-schools.component.scss
+++ b/src/app/admin/tab-schools/tab-schools.component.scss
@@ -13,6 +13,10 @@ ion-chip strong {
     font-size: 1.2rem;
 }
 
+ion-grid.background--light {
+  background-color: #f4f5f8;
+}
+
 ion-modal.modal-classes__item ion-label{
   --color: #666666 !important;
   font-size: 1rem !important;
