--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -269,7 +269,7 @@
         </ion-row>
       </ion-grid>
     </ion-header>
-    <ion-content class="ion-padding">
+    <ion-content class="ion-padding" color="light">
 
       <ion-list>
         <ion-item-sliding>
@@ -325,8 +325,69 @@
         </ion-buttons>
         <ion-title>Materias</ion-title>
       </ion-toolbar>
+      <ion-grid class="background--light">
+        <ion-row>
+          <ion-col size="auto">
+            <ion-list [inset]="true">
+              <ion-item>
+                <ion-input
+                  label="Nueva materia"
+                  labelPlacement="stacked"
+                  placeholder="Nombre"
+                  [(ngModel)]="courseName"
+                >
+                </ion-input>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+          <ion-col size="3">
+            <ion-fab vertical="center" horizontal="center">
+              <ion-fab-button
+                size="small"
+                [disabled]="!isValidCourse()"
+                (click)="onAddCourse()"
+              >
+                <ion-icon name="add"></ion-icon>
+              </ion-fab-button>
+            </ion-fab>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-header>
-    <ion-content>
+    <ion-content class="ion-padding" color="light">
+
+      <ion-list>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>ESPAÑOL</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>MATEMÁTICAS</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>TECNOLOGÍA</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
 
     </ion-content>
   </ng-template>
