feat(admin-dashboard): add spinner in school deletion and add a validator to disable the save button

--- a/src/app/admin/tab-schools/tab-schools.component.scss
+++ b/src/app/admin/tab-schools/tab-schools.component.scss
@@ -37,3 +37,11 @@ ion-modal.modal-classes__item ion-label > p {
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   width: 90%;
 }
+
+.container__spinner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
