--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>Escuelas</ion-title>
-    @if(isLoading) {
+    @if(isLoadingData) {
       <ion-progress-bar color="warning" type="indeterminate"></ion-progress-bar>
     }
   </ion-toolbar>
@@ -21,124 +21,136 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    @for(school of schools; track school.id) {
-      <ion-item-sliding class="sliding-item-card" #schoolSlidingItem>
+@if(isSpinnerActive) {
+  <div class="container__spinner">
+    <ion-spinner color="primary"></ion-spinner>
+    <p>{{ spinnerText }}</p>
+  </div>
+}
 
-        <ion-item class="custom-item">
-          <ion-label>
-            <h2>{{ school.nombre }}</h2>
-            <p>{{ school.cct }}</p>
-          </ion-label>
-          <ion-chip>PIN: <strong>{{ school.pin }}</strong></ion-chip>
-        </ion-item>
+@if(!isSpinnerActive) {
+  <ion-content>
+    <ion-list>
+      @for(school of schools; track school.id) {
+        <ion-item-sliding class="sliding-item-card" #schoolSlidingItem>
 
-        <ion-item-options side="end">
+          <ion-item class="custom-item">
+            <ion-label>
+              <h2>{{ school.nombre }}</h2>
+              <p>{{ school.cct }}</p>
+            </ion-label>
+            <ion-chip>PIN: <strong>{{ school.pin }}</strong></ion-chip>
+          </ion-item>
 
-          <ion-item-option id="edit-{{ school.id }}">
-            <ion-icon slot="icon-only" name="create"></ion-icon>
-          </ion-item-option>
+          <ion-item-options side="end">
 
-          <ion-item-option id="delete-{{ school.id }}" color="danger">
-            <ion-icon slot="icon-only" name="trash"></ion-icon>
-          </ion-item-option>
+            <ion-item-option id="edit-{{ school.id }}">
+              <ion-icon slot="icon-only" name="create"></ion-icon>
+            </ion-item-option>
 
-          <ion-action-sheet
-           trigger="delete-{{ school.id }}"
-           header="Estás a punto de eliminar"
-           subHeader="{{ school.nombre }}"
-           [buttons]="actionSheetButtons"
-           (didDismiss)="onDeleteSchool($event, schoolSlidingItem, school)"
-          >
-          </ion-action-sheet>
+            <ion-item-option id="delete-{{ school.id }}" color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
 
-        </ion-item-options>
-      </ion-item-sliding>
-      <ion-modal
-       trigger="edit-{{school.id}}"
-       [initialBreakpoint]="initialBreakpoint"
-       [breakpoints]="breakpoints"
-       (didDismiss)="onModalDismiss(schoolSlidingItem)"
-      >
-        <ng-template>
+            <ion-action-sheet
+            trigger="delete-{{ school.id }}"
+            header="Estás a punto de eliminar"
+            subHeader="{{ school.nombre }}"
+            [buttons]="actionSheetButtons"
+            (didDismiss)="onDeleteSchool($event, schoolSlidingItem, school)"
+            >
+            </ion-action-sheet>
 
-          <ion-header>
-            <ion-toolbar>
-              <ion-buttons slot="start">
-                <ion-button (click)="closeModal('edit-'+school.id)">Cancelar</ion-button>
-              </ion-buttons>
-              <ion-title>Editar Escuela</ion-title>
-              <ion-buttons slot="end">
-                <ion-button
-                 [strong]="true"
-                 [disabled]="isNotDataChanged(school, nameEditInput, pinEditInput)"
-                 (click)="onUpdateSchool(school, nameEditInput, pinEditInput)"
-                >
-                  Guardar
-                </ion-button>
-              </ion-buttons>
-            </ion-toolbar>
-          </ion-header>
+          </ion-item-options>
+        </ion-item-sliding>
+        <ion-modal
+        trigger="edit-{{school.id}}"
+        [initialBreakpoint]="initialBreakpoint"
+        [breakpoints]="breakpoints"
+        (didDismiss)="onModalDismiss(schoolSlidingItem)"
+        >
+          <ng-template>
 
-          <ion-content color="light">
-            <!-- BEGIN EDIT SCHOOL ---------------------------------------------------------->
+            <ion-header>
+              <ion-toolbar>
+                <ion-buttons slot="start">
+                  <ion-button (click)="closeModal('edit-'+school.id)">Cancelar</ion-button>
+                </ion-buttons>
+                <ion-title>Editar Escuela</ion-title>
+                <ion-buttons slot="end">
+                  <ion-button
+                  [strong]="true"
+                  [disabled]="isNotDataChanged(school, nameEditInput, pinEditInput)"
+                  (click)="onUpdateSchool(school, nameEditInput, pinEditInput)"
+                  >
+                    Guardar
+                  </ion-button>
+                </ion-buttons>
+              </ion-toolbar>
+            </ion-header>
 
-              <form>
+            <ion-content color="light">
+              <!-- BEGIN EDIT SCHOOL ---------------------------------------------------------->
 
-                <ion-list [inset]="true">
-                  <ion-item>
-                    <ion-input
-                    label="CCT (Clave del Centro de Trabajo)"
-                    labelPlacement="stacked"
-                    value="{{ school.cct }}"
-                    disabled
-                    >
-                    </ion-input>
-                  </ion-item>
-                </ion-list>
+                <form>
 
-                <ion-list [inset]="true">
-                  <ion-item>
-                    <ion-input
-                    label="Nombre de la escuela"
-                    labelPlacement="stacked"
-                    maxlength="100"
-                    value = "{{ school.nombre }}"
-                    #nameEditInput
-                    >
-                    </ion-input>
-                  </ion-item>
-                </ion-list>
+                  <ion-list [inset]="true">
+                    <ion-item>
+                      <ion-input
+                      label="CCT (Clave del Centro de Trabajo)"
+                      labelPlacement="stacked"
+                      value="{{ school.cct }}"
+                      disabled
+                      >
+                      </ion-input>
+                    </ion-item>
+                  </ion-list>
 
-                <ion-list [inset]="true">
-                  <ion-input-otp value="{{  school.pin }}" #pinEditInput>
-                    <ion-label>PIN</ion-label>
-                  </ion-input-otp>
-                </ion-list>
+                  <ion-list [inset]="true">
+                    <ion-item>
+                      <ion-input
+                      style="text-transform: uppercase;"
+                      label="Nombre de la escuela"
+                      labelPlacement="stacked"
+                      maxlength="100"
+                      value = "{{ school.nombre }}"
+                      #nameEditInput
+                      >
+                      </ion-input>
+                    </ion-item>
+                  </ion-list>
 
-              </form>
+                  <ion-list [inset]="true">
+                    <ion-input-otp value="{{  school.pin }}" #pinEditInput>
+                      <ion-label>PIN</ion-label>
+                    </ion-input-otp>
+                  </ion-list>
+
+                </form>
 
 
-            <!-- END EDIT SCHOOL ----------------------------------------------------->
-          </ion-content>
+              <!-- END EDIT SCHOOL ----------------------------------------------------->
+            </ion-content>
 
-        </ng-template>
-      </ion-modal>
-    }
-  </ion-list>
+          </ng-template>
+        </ion-modal>
+      }
+    </ion-list>
 
-  <ion-toast
-   cssClass="page__toast"
-   [message]="toastMessage"
-   [isOpen]="isToastOpen"
-   [duration]="5000"
-   (didDismiss)="this.setOpenToast(false)"
-  >
-  </ion-toast>
+    <ion-toast
+    cssClass="page__toast"
+    [message]="toastMessage"
+    [isOpen]="isToastOpen"
+    [duration]="5000"
+    (didDismiss)="this.setOpenToast(false)"
+    >
+    </ion-toast>
 
-</ion-content>
+  </ion-content>
+}
 
+
+<!-- Modal de Nueva Escuela -->
 <ion-modal
  trigger="new-school-btn"
  (willDismiss)="closeModal('new-school-btn')"
@@ -157,7 +169,7 @@
           <ion-button
            (click)="onAddSchool()"
            [strong]="true"
-           [disabled]="!schoolForm.valid"
+           [disabled]="!schoolForm.valid || isSaveButtonDisabled"
            type="submit"
           >
             Guardar
