--- a/src/app/admin/tab-schools/tab-schools.component.scss
+++ b/src/app/admin/tab-schools/tab-schools.component.scss
@@ -34,3 +34,14 @@ ion-modal.modal-classes__item ion-label > p {
   align-items: center;
   height: 100%;
 }
+
+.add-subject-btn {
+  --border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin: 0 0.5rem 0 0;
+
+  ion-icon {
+    font-size: 24px;
+  }
+}
