--- a/src/app/admin/tab-users/tab-users.component.scss
+++ b/src/app/admin/tab-users/tab-users.component.scss
@@ -1,7 +1,16 @@
+a {
+  text-decoration: none;
+  color:#666666;
+}
+
 h2 {
   color: #666666;
   font-size: 0.9rem;
   font-weight: 500;
+}
+
+ion-chip {
+  margin: 1rem 0 0 0;
 }
 
 ion-label {
@@ -14,10 +23,16 @@ ion-label {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 
+  p {
+    font-size: 0.7rem;
+  }
+
   ion-avatar {
     --border-radius: 50%;
-    width: 50px;
+    align-self: flex-start;
     height: 50px;
-    margin-right: 15px;
+    margin-right: 1rem;
+    margin-top: 14px;
+    width: 50px;
   }
 }
