--- a/src/app/teacher/teacher.page.html
+++ b/src/app/teacher/teacher.page.html
@@ -1,23 +1,123 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Bienvenido</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="onLogout()">
-        <ion-icon name="log-out-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+@if(isUserActive) {
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab-users">
+        <ion-icon name="person"></ion-icon>
+        Usuarios
+      </ion-tab-button>
+      <ion-tab-button tab="tab-schools">
+        <ion-icon name="business"></ion-icon>
+        Escuelas
+      </ion-tab-button>
+      <ion-tab-button tab="tab-notifications">
+        <ion-icon name="notifications"></ion-icon>
+        Notificaciones
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+}
 
-<ion-content class="ion-padding">
+@if (!isUserActive) {
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Completa tu perfil</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{ school?.nombre }}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
+  <ion-content class="ion-padding" color="light">
+    <form [formGroup]="form">
+      <ion-list-header>
+        Datos de la escuela
+      </ion-list-header>
+      <ion-note>
+        Número de teléfono de tu escuela.
+      </ion-note>
+      <ion-list [inset]="true">
+        <ion-item>
+          <ion-input
+          formControlName="escuela"
+          readonly
+          >
+        </ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input
+          formControlName="telefono"
+          label="Teléfono:"
+          type="tel"
+          maxlength="10"
+          >
+          </ion-input>
+        </ion-item>
+        @if (telefono.touched && telefono.invalid) {
+          <ion-text color="danger">
+            @if (telefono.errors?.['required']) {
+              <small class="ion-padding">El teléfono es obligatorio.</small>
+            }
+            @if (telefono.errors?.['pattern']) {
+              <small class="ion-padding">El teléfono debe tener 10 dígitos numéricos.</small>
+            }
+          </ion-text>
+        }
+      </ion-list>
 
-    </ion-card-content>
-  </ion-card>
+      <ion-list-header>
+        Tus datos
+      </ion-list-header>
+      <ion-note>
+        Nombre completo y tu número de celular.
+      </ion-note>
+      <ion-list [inset]="true">
+        <ion-item>
+          <ion-input
+          formControlName="nombre"
+          label="Nombre:"
+          maxlength="100"
+          >
+          </ion-input>
+        </ion-item>
+        @if (nombre.touched && nombre.invalid) {
+          <ion-text color="danger">
+            @if (nombre.errors?.['required']) {
+              <small class="ion-padding">El nombre es obligatorio.</small>
+            }
+            @if (nombre.errors?.['pattern']) {
+              <small class="ion-padding">Solo se permiten letras en el nombre.</small>
+            }
+          </ion-text>
+        }
+        <ion-item>
+          <ion-input
+          formControlName="celular"
+          label="Celular:"
+          type="tel"
+          maxlength="10"
+          >
+          </ion-input>
+        </ion-item>
+        @if (celular.touched && celular.invalid) {
+          <ion-text color="danger">
+            @if (celular.errors?.['required']) {
+              <small class="ion-padding">El celular es obligatorio.</small>
+            }
+            @if (celular.errors?.['pattern']) {
+              <small class="ion-padding">El celular debe tener 10 dígitos numéricos.</small>
+            }
+          </ion-text>
+        }
+      </ion-list>
 
-</ion-content>
+
+      <ion-list [inset]="true" class="background--light">
+        <ion-button
+        expand="block"
+        [disabled]="!form.valid"
+        (click)="onUpdateUserProfile()"
+        >
+          Guardar
+        </ion-button>
+      </ion-list>
+
+    </form>
+  </ion-content>
+}
