--- a/src/app/teacher/teacher.page.html
+++ b/src/app/teacher/teacher.page.html
@@ -1,23 +1,4 @@
-@if(isUserActive) {
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="tab-users">
-        <ion-icon name="person"></ion-icon>
-        Usuarios
-      </ion-tab-button>
-      <ion-tab-button tab="tab-schools">
-        <ion-icon name="business"></ion-icon>
-        Escuelas
-      </ion-tab-button>
-      <ion-tab-button tab="tab-notifications">
-        <ion-icon name="notifications"></ion-icon>
-        Notificaciones
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
-}
-
-@if (!isUserActive) {
+@if(!isUserActive && !isLoading) {
   <ion-header>
     <ion-toolbar color="primary">
       <ion-title>Completa tu perfil</ion-title>
@@ -121,3 +102,23 @@
     </form>
   </ion-content>
 }
+
+@if(isUserActive) {
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab-users">
+        <ion-icon name="person"></ion-icon>
+        Alumnos
+      </ion-tab-button>
+      <ion-tab-button tab="tab-schools">
+        <ion-icon name="people"></ion-icon>
+        Grupos
+      </ion-tab-button>
+      <ion-tab-button tab="tab-notifications">
+        <ion-icon name="notifications"></ion-icon>
+        Notificaciones
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+}
+
