--- a/src/app/teacher/tab-groups/tab-groups.component.html
+++ b/src/app/teacher/tab-groups/tab-groups.component.html
@@ -1,3 +1,11 @@
-<p>
-  teacher-tab-groups works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Grupos</ion-title>
+    @if(isLoading) {
+      <ion-progress-bar type="indeterminate" color="warning"></ion-progress-bar>
+    }
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+</ion-content>
